# bevy_pkv

./: Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: inserts.rs
examples/: basic.rs  enumkeys.rs  migration.rs  persistent_resource.rs
src/: lib.rs  local_storage_store.rs  path.rs  persistent_resource.rs  pickledb_store.rs  prelude.rs  redb_store.rs  rocksdb_store.rs  sled_store.rs
src/stores/: mod.rs  rocksdb_store.rs  sled_store.rs
