[package]
name = "bevy_pkv"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "Persistent key value store for apps/games"
keywords = ["gamedev", "key-value-store", "bevy"]
categories = ["game-development"]
repository = "https://github.com/johanhelsing/bevy_pkv"

[dependencies]
thiserror = "1.0"
serde = "1.0"
bevy_ecs = "0.10" # we need for deriving Resource in PkvStore

[features]
default = ["bevy"]
bevy = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", default-features = false, features = ["Storage", "Window"] }
wasm-bindgen = { version = "0.2", default-features = false }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sled = "0.34"
rmp-serde = "1.1"
directories = "4.0"

[dev-dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_winit", # without this, basic example will terminate immediately
    # "wayland" # wayland is the future for linux (and has less deps => faster ci)
    "x11", # ... but github actions public runners don't have libxkbcommon :(
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1"
easybench-wasm = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "inserts"
harness = false