[package]
name = "bevy_pkv"
version = "0.11.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "Persistent key value store for apps/games"
keywords = ["gamedev", "key-value-store", "bevy"]
categories = ["game-development"]
repository = "https://github.com/johanhelsing/bevy_pkv"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bevy_ecs = { version = "0.14", optional = true }   # we need for deriving Resource in PkvStore

[features]
default = ["bevy", "redb"]
bevy = ["dep:bevy_ecs"]
rocksdb = ["dep:rocksdb"]
sled = ["dep:sled"]
redb = ["dep:redb"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", default-features = false, features = [
    "Storage",
    "Window",
] }
wasm-bindgen = { version = "0.2", default-features = false }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = { version = "0.22", optional = true }
sled = { version = "0.34", optional = true }
rmp-serde = "1.1"
directories = "5.0"
redb = { version = "1.5", optional = true }

[dev-dependencies]
bevy = { version = "0.14", default-features = false }
strum_macros = "0.26"
tempfile = "3"

[build-dependencies]
cfg_aliases = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1"
easybench-wasm = "0.2"
web-sys = { version = "0.3", default-features = false, features = ["console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "inserts"
harness = false

[[example]]
name = "basic"
required-features = ["bevy"]

[[example]]
name = "migration"
required-features = ["bevy"]

[[example]]
name = "enumkeys"
required-features = ["bevy"]
