[package]
name = "bevy_pkv"
version = "0.13.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "Persistent key value store for apps/games"
keywords = ["gamedev", "key-value-store", "bevy"]
categories = ["game-development"]
repository = "https://github.com/johanhelsing/bevy_pkv"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
bevy_ecs = { version = "0.17", optional = true }   # we need for deriving Resource in PkvStore
bevy_app = { version = "0.17", optional = true }   # we need for Plugin trait and App type

[features]
default = ["bevy", "redb"]
bevy = ["dep:bevy_ecs", "dep:bevy_app"]
rocksdb = ["dep:rocksdb"]
sled = ["dep:sled"]
redb = ["dep:redb"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", default-features = false, features = [
    "Storage",
    "Window",
] }
wasm-bindgen = { version = "0.2", default-features = false }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = { version = "0.24", optional = true }
sled = { version = "0.34", optional = true }
rmp-serde = "1.1"
directories = "6.0"
redb = { version = "2.2", optional = true }

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_log"]}
strum_macros = "0.27"
tempfile = "3"

[build-dependencies]
cfg_aliases = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1"
easybench-wasm = "0.2"
web-sys = { version = "0.3", default-features = false, features = ["console"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "inserts"
harness = false

[[example]]
name = "basic"
required-features = ["bevy"]

[[example]]
name = "migration"
required-features = ["bevy"]

[[example]]
name = "enumkeys"
required-features = ["bevy"]

[[example]]
name = "persistent_resource"
required-features = ["bevy"]
